fix text-align h4

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,6 +32,7 @@ header {
 
 h4 {
     margin: 1.2rem 0 1.2rem 0;
+    text-align: center;
 }
 
 #body-pintar {
